# origami

./: Cargo.toml
demo/: Cargo.toml
demo/src/window/gradient_bg/: mod.rs
demo/src/window/loading_indicator/: mod.rs
demo/src/window/shimmer_effect/: mod.rs
demo/src/window/spoiler/: mod.rs
origami/: Cargo.toml
origami/src/gradient_bg/: mod.rs
origami/src/loading_indicator/: mod.rs
origami/src/shimmer_effect/: mod.rs
