[package]
name = "demo"
version = "0.8.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.8", package = "libadwaita" }
gtk = { version = "0.10", package = "gtk4", features = ["v4_18", "blueprint"] }
ori = { path = "../origami", package = "origami" }
